# ProtoShares

./: .gitignore  CMakeLists.txt  INSTALL  README.md  memorycoin-qt.pro  memorycoind.pro
src/: CMakeLists.txt  addrman.cpp  addrman.h  alert.cpp  alert.h  allocators.h  base58.h  bignum.h  bitcoinrpc.h  bloom.cpp  bloom.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.h  compat.h  crypter.cpp  crypter.h  db.cpp  db.h  hash.cpp  hash.h  init.cpp  init.h  key.cpp  key.h  keystore.cpp  keystore.h  leveldb.cpp  leveldb.h  limitedmap.h  main.cpp  main.h  makefile.linux-mingw  makefile.mingw  makefile.osx  makefile.unix  memorycoinrpc.cpp  momentum.cpp  momentum.h  (+33 more)
src/mac/: Info.plist  macbuilder.py  yam
src/qt/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoingui.cpp  clientmodel.cpp  clientmodel.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  macdockiconhandler.h  macdockiconhandler.mm  memorycoin.cpp  memorycoin.qrc  memorycoinaddressvalidator.cpp  memorycoinaddressvalidator.h  memorycoinamountfield.cpp  memorycoinamountfield.h  memorycoingui.cpp  memorycoingui.h  memorycoinstrings.cpp  memorycoinunits.cpp  memorycoinunits.h  monitoreddatamapper.cpp  monitoreddatamapper.h  notificator.cpp  notificator.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  (+44 more)
src/test/: CMakeLists.txt  Checkpoints_tests.cpp  DoS_tests.cpp  README  accounting_tests.cpp  (+29 more)
(+133 files in other folders)
